# termux-mcp-edge

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: .validation-trigger  CODEOWNERS  dependabot.yml  pull_request_template.md  replay-clippy-diagnostic.txt  replay-diagnostic.txt  replay-test-diagnostic.txt
.github/remediation/: apply_directory_grant_verifier.py  apply_directory_replay_ledger.py  apply_principal_session_provenance.py  apply_release_validator_closed_gate.py  fix_directory_grant_verifier_generated.py  fix_principal_validation_test.py  fix_replay_clippy.py
.github/workflows/: android-cross-compile.yml  apply-create-directory-fail-closed-gate.yml  apply-directory-replay-remediation.yml  apply-schema-boundaries-198.yml  ci.yml  fix-pr216.yml  format-auth-pr.yml  format-json-rpc-envelope.yml  format-pr-196.yml  format-transport-limits.yml  generate-framework-lock.yml  patch-json-rpc-envelope.yml  patch-transport-limits.yml  publish-release.yml  repair-capture-service-state-216.yml  repair-cargo-lock.yml  repair-pr-216.yml  repair-stop-failure-candidate.yml  repair-stop-failure-cleanup-216.yml  repair-stop-failure-cleanup.yml  replay-ledger-diagnostic.yml  security.yml  stage-release-assets.yml  strict-jsonrpc-patch.yml
docs/: ANDROID_ARTIFACTS.md  ANDROID_BATTERY_STATUS.md  ANDROID_VOLUME_CONTROL.md  ANDROID_VOLUME_STATUS.md  CAPABILITIES.md  COPY_FILE_CAPABILITY_GRANTS.md  CREATE_DIRECTORY_CAPABILITY_GRANT.md  CREATE_DIRECTORY_CAPABILITY_GRANTS.md  DEVICE_PRODUCTION_GATE.md  EMBEDDING.md  EMULATED_RELEASE_GATE.md  FILESYSTEM_SAFE_ROOTS.md  GITHUB_IMPORT.md  MCP_RESTORATION_VALIDATION.md  MCP_RUNTIME_ROADMAP.md  NAMED_TUNNEL_SETUP.md  OPERATIONS.md  PRODUCTION_READINESS.md  PUBLIC_RELEASE.md  RELEASE_CANDIDATE_VALIDATION.md  RELEASE_GOVERNANCE.md  RUNIT_SERVICE_TRANSITIONS.md  SAFE_ROOT_BINARY_RANGES.md  SAFE_ROOT_BINARY_READS.md  SAFE_ROOT_DIRECTORY_CREATION.md  SAFE_ROOT_FILE_COPY.md  SAFE_ROOT_FILE_HASHING.md  SAFE_ROOT_FILE_TRASHING.md  SAFE_ROOT_FILE_WRITES.md  SAFE_ROOT_PATH_DISCOVERY.md  SAFE_ROOT_PATH_METADATA.md  SAFE_ROOT_TEXT_RANGES.md  SAFE_ROOT_TEXT_SEARCH.md  SECURITY.md  TERMUX_DEPLOYMENT.md  TOOL_AUTHORIZATION_POLICY.md  TRANSPORT_THREAT_MODEL.md  TRASH_FILE_CAPABILITY_GRANTS.md  V0.6.0_RELEASE_CANDIDATE.md  VALIDATION.md  (+30 more)
docs/release-evidence/: v0.5.1-physical-fe5f7b80.json
examples/: secure_embedding.rs
scripts/: apply_create_directory_fail_closed_gate.py  classify_observation_requirement.sh  cross_compile.sh  package_android_artifact.sh  package_physical_qualification.sh  prepare_release_publication_assets.sh  publish_release_assets.sh  retire_legacy_runit.sh  setup_named_tunnel.sh  stage_release_assets.sh  termux_battery_emulated_gate.sh  termux_command_emulated_gate.sh  termux_deploy.sh  termux_device_smoke.sh  termux_emulated_gate.sh  termux_release_validate.sh  termux_volume_control_emulated_gate.sh  termux_volume_emulated_gate.sh  verify_observation_inheritance.sh
src/: android_battery.rs  android_battery_status.rs  android_provider.rs  android_status.rs  android_volume.rs  android_volume_control.rs  android_volume_grant.rs  audit.rs  auth.rs  bounded_process.rs  capability_token.rs  command_execution.rs  command_policy.rs  config.rs  copy_file_grant.rs  create_directory_grant.rs  directory_grant.rs  directory_replay.rs  error.rs  execution_policy.rs  grant_replay.rs  health.rs  json_rpc.rs  lib.rs  main.rs  mcp_session.rs  mcp_transport.rs  platform_info.rs  request_grant.rs  request_grant_capability.rs  request_limits.rs  service_status.rs  transport_security.rs  trash_file_grant.rs  write_file_grant.rs  write_policy.rs
src/tools/: filesystem.rs  mod.rs  shell.rs  system.rs
tests/: .pr170-ci-trigger.rs  capability_audit_contract.rs  cli.rs  command_public_api.rs  cross_compile_contract_test.sh  documentation_contract_test.sh  filesystem_audit_counters.rs  filesystem_jail_boundaries.rs  filesystem_link_boundaries.rs  filesystem_response_contract.rs  filesystem_write_boundaries.rs  full_suite_feature_contract.rs  integration.rs  json_rpc_envelope.rs  legacy_service_retirement.rs  mcp_android_platform_metadata.rs  mcp_auth.rs  mcp_command_profiles.rs  mcp_copy_file.rs  mcp_copy_file_authorization.rs  mcp_create_directory.rs  mcp_create_directory_authorization.rs  mcp_find_paths.rs  mcp_hash_file.rs  mcp_high_impact_disabled.rs  mcp_high_impact_final_gate.rs  mcp_path_metadata.rs  mcp_read_binary_file.rs  mcp_read_binary_range.rs  mcp_read_text_range.rs  mcp_request_limits.rs  mcp_search_text.rs  mcp_sse.rs  mcp_streamable_http.rs  mcp_test_harness.rs  mcp_tool_argument_schemas.rs  mcp_transport_edge_cases.rs  mcp_trash_file.rs  mcp_trash_file_authorization.rs  mcp_write_file_authorization.rs  (+18 more)
(+3 files in other folders)
