[package]
name = "termux-mcp-server"
version = "0.5.1"
edition = "2021"
authors = ["CyberBASSLord-666"]
description = "Enterprise-grade Model Context Protocol server for Android (Termux) on high-end devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CyberBASSLord-666/termux-mcp-edge"
keywords = ["mcp", "android", "termux", "edge-computing", "ai-agent"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
rmcp = { version = "0.2", features = ["server", "transport-sse"] }
schemars = "0.8"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
config = "0.14"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
quick-xml = { version = "0.36", features = ["serialize"] }
roxmltree = "0.20"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "termux-mcp-server"
path = "src/main.rs"
