[package]
name = "termux-mcp-server"
version = "0.6.0"
edition = "2021"
rust-version = "1.88"
authors = ["CyberBASSLord-666"]
description = "Security-focused Model Context Protocol server for Android and Termux"
license = "MIT"
readme = "README.md"
repository = "https://github.com/CyberBASSLord-666/termux-mcp-edge"
keywords = ["mcp", "android", "termux", "edge-computing", "ai-agent"]
categories = ["command-line-utilities", "network-programming"]

[features]
default = []
mcp-runtime = ["dep:futures-util", "dep:hmac", "dep:rustix", "dep:sha2"]
android-battery-status = ["mcp-runtime", "tokio/process", "rustix/process"]
android-volume-status = ["mcp-runtime", "tokio/process", "rustix/process"]
android-volume-control = ["android-volume-status"]
command-execution = ["mcp-runtime", "tokio/process", "rustix/process"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.7", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
futures-util = { version = "0.3", optional = true }
metrics = "0.24"
hmac = { version = "0.13", optional = true }
rustix = { version = "1", features = ["fs"], optional = true }
sha2 = { version = "0.11", optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "termux-mcp-server"
path = "src/main.rs"
